# libtorch-sdk

./: .gitignore  CMakeLists.txt  README.md  client.cc  client.cpp  client.hpp  exampleClient.cc  exampleClient.hpp  message_handler.cc  modelSend.cpp  server.cc  server.cpp  testModel.cc  typing.h  typing.hpp
proto/: CMakeLists.txt  modelParams.proto  paramsOut.txt  sdk_transport.grpc.pb.cc  sdk_transport.grpc.pb.h  sdk_transport.pb.cc  sdk_transport.pb.h  sdk_transport.proto  sendReceiveWeights.grpc.pb.cc  sendReceiveWeights.grpc.pb.h  sendReceiveWeights.pb.cc  sendReceiveWeights.pb.h  sendReceiveWeights.proto
